--- a/tools/create_project/msvc8/create_project.vcproj
+++ b/tools/create_project/msvc8/create_project.vcproj
@@ -184,6 +184,10 @@
 				RelativePath="..\visualstudio.cpp"
 				>
 			</File>
+			<File
+				RelativePath="..\xcode.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -226,6 +230,10 @@
 			</File>
 			<File
 				RelativePath="..\scripts\revision.vbs"
+				>
+			</File>
+			<File
+				RelativePath="..\xcode.h"
 				>
 			</File>
 		</Filter>
