--- a/tools/create_project/msvc9/create_project.vcproj
+++ b/tools/create_project/msvc9/create_project.vcproj
@@ -185,6 +185,10 @@
 				RelativePath="..\visualstudio.cpp"
 				>
 			</File>
+			<File
+				RelativePath="..\xcode.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -227,6 +231,10 @@
 			</File>
 			<File
 				RelativePath="..\scripts\revision.vbs"
+				>
+			</File>
+			<File
+				RelativePath="..\xcode.h"
 				>
 			</File>
 		</Filter>
