configuring git a bit more for xcode dev

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@
 lib*.a
 .deps
 
-.DS_Store
-
 /config.log
 /scummvm
 /scummvm-static
@@ -106,6 +104,24 @@ lib*.a
 /tools/create_translations/create_translations
 /tools/qtable/qtable
 /tools/skycpt/skycpt
+
+#ignore thumbnails created by OSX
+.DS_Store
+#ignore xcode files
+build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+xcuserdata
+profile
+*.moved-aside
 
 #ignore thumbnails created by windows
 Thumbs.db
